--- a/main.css
+++ b/main.css
@@ -1,1 +1,47 @@
 
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 0;
+            padding: 0;
+        }
+        
+        video {
+            width: 100%;
+            background-color: black;
+        }
+        
+        .flex {
+            padding: 20px 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        .flex>button {
+            width: 100%;
+            height: 50px;
+        }
+        
+        .flex>.download-video {
+            width: 100%;
+            height: 50px;
+            background-color: black;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 6px;
+            text-decoration: none;
+        }
+        
+        .recorded-video-wrap {
+            display: flex;
+            width: 100%;
+            flex-direction: column;
+        }
+        
+        .hidden {
+            visibility: hidden;
+        }
