--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@
         
         video {
             width: 100%;
+             max-width:1000px;
             background-color: black;
         }
         
