--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@
         .flex {
             padding: 20px 0;
             width: 100%;
+            max-width:1000px;
             display: flex;
             justify-content: space-between;
         }
