--- a/main.css
+++ b/main.css
@@ -40,6 +40,7 @@
         
         .recorded-video-wrap {
             display: flex;
+            align-items:center;
             width: 100%;
             flex-direction: column;
         }
